--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -3,14 +3,9 @@
 
 name: Go
 
-on:
-  push:
-    branches: [ $default-branch ]
-  pull_request:
-    branches: [ $default-branch ]
+on: push
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
