--- a/.github/workflows/node.yaml
+++ b/.github/workflows/node.yaml
@@ -12,10 +12,10 @@ jobs:
       NODE_VERSION: "18.x"
     steps:
     - uses: actions/checkout@v3
-    - name: Use Node.js $NODE_VERSION
+    - name: Use Node.js ${{ env.NODE_VERSION }}
       uses: actions/setup-node@v3
       with:
-        node-version: $NODE_VERSION
+        node-version: ${{ env.NODE_VERSION }}
         cache: 'npm'
     - run: npm ci
     - run: npm run build --if-present
