--- a/.github/workflows/fly.yaml
+++ b/.github/workflows/fly.yaml
@@ -13,3 +13,12 @@ jobs:
       - run: flyctl deploy --remote-only --config ./fly.server.toml
         env:
           FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+  deploy-client:
+    name: Deploy Client
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: superfly/flyctl-actions/setup-flyctl@master
+      - run: flyctl deploy --remote-only --config ./fly.client.toml
+        env:
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
