update deploy token env vars for server and client deploy jobs

--- a/.github/workflows/fly.yaml
+++ b/.github/workflows/fly.yaml
@@ -12,7 +12,7 @@ jobs:
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only --config ./fly.server.toml
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN_EVENTUAL_SERVER }}
   deploy-client:
     name: Deploy Client
     runs-on: ubuntu-latest
@@ -21,4 +21,4 @@ jobs:
       - uses: superfly/flyctl-actions/setup-flyctl@master
       - run: flyctl deploy --remote-only --config ./fly.client.toml
         env:
-          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
+          FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN_EVENTUAL_CLIENT }}
