--- a/fly.server.toml
+++ b/fly.server.toml
@@ -7,7 +7,7 @@ app = "eventual-server"
 primary_region = "dfw"
 
 [build]
-  dockerfile = "Dockerfile.server"
+  dockerfile = "./Dockerfile.server"
 
 [http_service]
   internal_port = 8080
