--- a/Dockerfile.client
+++ b/Dockerfile.client
@@ -1,10 +1,13 @@
 ARG NODE_VERSION=18
+ARG BACKEND_URL="https://eventual-server.fly.dev"
 FROM node:${NODE_VERSION} as builder
 
 WORKDIR /app
 COPY package.json package-lock.json ./
 RUN npm install --omit="dev"
 COPY . .
+
+ENV REACT_APP_BACKEND_URL=${BACKEND_URL}
 RUN npm run build
 
 FROM nginxinc/nginx-unprivileged as nginx
